import { UserRole } from "../user-role.enum";

// User che viene restituito dal backend nelle chiamate GET
export interface UserDto {
    id: number;
    name: string;
    surname: string;
    username: string;
    role: UserRole;
}
