classDiagram
    class UserRole {
        <<enumeration>>
        AMMINISTRATORE
        OPERATORE_SANITARIO
    }

    class UserManagementErrorType {
        <<enumeration>>
        USERNAME_ALREADY_IN_USE
        OTHER_ERROR
    }

    class CreateUserDto {
        <<abstract>>
        +string name
        +string surname
        +string username
    }

    class UserCreatedResponseDto {
        <<abstract>>
        +string tempPassword
    }

    class UserDto {
        <<abstract>>
        +number id
        +string name
        +string surname
        +string username
        +UserRole role
    }

    class UserInfo {
        <<abstract>>
        +string username
        +string firstName
        +string lastName
        +UserRole role
    }

    class User {
        <<abstract>>
        +number id
        +string firstName
        +string lastName
        +string username
        +UserRole role
    }

    class CreateUserFormComponent {
        +InputSignal~UserManagementErrorType|null~ errorType
        +InputSignal~boolean~ isOpen
        +OutputEmitterRef~CreateUserDto~ formSubmit
        +OutputEmitterRef~void~ openRequest
        +OutputEmitterRef~void~ closeRequest
        -ElementRef~HTMLInputElement~? nameInput
        -FormBuilder fb
        +FormGroup form
        +submit() void
        +reset() void
        +resetAndFocus() void
        +requestClose() void
        +requestOpen() void
    }

    class UserCreatedDialogComponent {
        +InputSignal~UserCreatedResponseDto~ response
        +InputSignal~CreateUserDto~ user
        +OutputEmitterRef~void~ closed
        +closeDialog() void
    }

    class UserListComponent {
        +InputSignal~UserDto[]|undefined~ users
        +OutputEmitterRef~number~ deleteUser
        +WritableSignal~UserDto|null~ pendingDeleteUser
        +onDeleteRequest(user:UserDto) void
        +onDeleteCancel() void
        +onDeleteConfirm() void
        +onDelete(user:UserDto) void
    }

    class DecoderPasswordService {
        +decodeTempPassword(tempPassword:string) string
    }

    class UserApiService {
        -HttpClient http
        -string baseUrl
        -DecoderPasswordService decoderPasswordService
        +getUsers() Observable~UserDto[]~
        +createUser(dto:CreateUserDto) Observable~UserCreatedResponseDto~
        +deleteUser(id:number) Observable~void~
    }

    class UserManagementPageStateService {
        -UserApiService userApi
        -BehaviorSubject~void~ refreshTrigger$
        +Observable~UserDto[]~ users$
        +WritableSignal~UserCreatedResponseDto|null~ createdResponse
        +WritableSignal~CreateUserDto|null~ createdUser
        +WritableSignal~UserManagementErrorType|null~ formError
        +WritableSignal~boolean~ isCreateFormOpen
        +openCreateForm() void
        +closeCreateForm() void
        +submitUser(dto:CreateUserDto) Observable~UserCreatedResponseDto~
        +deleteUser(id:number) Observable~void~
        +closeDialog() void
        -mapFormError(err:unknown) UserManagementErrorType
        -isHttpStatus(err:unknown, status:number) boolean
    }

    class UserManagementPageComponent {
        -UserManagementPageStateService pageState
        +Observable~UserDto[]~ users$
        +WritableSignal~UserCreatedResponseDto|null~ createdResponse
        +WritableSignal~CreateUserDto|null~ createdUser
        +WritableSignal~UserManagementErrorType|null~ formError
        +WritableSignal~boolean~ isCreateFormOpen
        -CreateUserFormComponent? createUserFormComponent
        +openCreateForm() void
        +closeCreateForm() void
        +onFormSubmit(dto:CreateUserDto) void
        +onUserDeleted(id:number) void
        +onDialogClosed() void
    }

    %% Relazioni tra modelli
    UserDto --> UserRole
    UserInfo --> UserRole
    User --> UserRole

    %% Relazioni componenti
    CreateUserFormComponent ..> CreateUserDto
    CreateUserFormComponent ..> UserManagementErrorType

    UserCreatedDialogComponent ..> UserCreatedResponseDto
    UserCreatedDialogComponent ..> CreateUserDto

    UserListComponent ..> UserDto

    UserManagementPageComponent --> UserManagementPageStateService
    UserManagementPageComponent ..> UserDto
    UserManagementPageComponent ..> CreateUserDto
    UserManagementPageComponent ..> UserCreatedResponseDto
    UserManagementPageComponent ..> UserManagementErrorType
    UserManagementPageComponent ..> CreateUserFormComponent
    UserManagementPageComponent ..> UserListComponent
    UserManagementPageComponent ..> UserCreatedDialogComponent

    %% Relazioni servizi
    UserApiService --> DecoderPasswordService
    UserApiService ..> UserDto
    UserApiService ..> CreateUserDto
    UserApiService ..> UserCreatedResponseDto

    UserManagementPageStateService --> UserApiService
    UserManagementPageStateService ..> UserDto
    UserManagementPageStateService ..> CreateUserDto
    UserManagementPageStateService ..> UserCreatedResponseDto
    UserManagementPageStateService ..> UserManagementErrorType